--- a/application/views/scripts/dossier/avis-et-derogations-edit.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations-edit.phtml
@@ -28,9 +28,37 @@
     </div>
 
     <div class="control-group">
-        <label class="control-label" for="inputInformations">Informations</label>
+        <label class="control-label" for="inputObjet">Objet</label>
         <div class="controls">
-            <textarea id="inputInformations" name="INFORMATIONS"><?= $this->avisDerogations['INFORMATIONS'] ?></textarea>
+            <textarea id="inputObjet" name="OBJET"><?= $this->avisDerogations['OBJET'] ?></textarea>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <label class="control-label" for="inputJustification">Justification</label>
+        <div class="controls">
+            <textarea id="inputJustification" name="JUSTIFICATION"><?= $this->avisDerogations['JUSTIFICATION'] ?></textarea>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <label class="control-label" for="inputArticlesConcernes">Article(s) concerné(s)</label>
+        <div class="controls">
+            <textarea id="inputArticlesConcernes" name="ARTICLES_CONCERNES"><?= $this->avisDerogations['ARTICLES_CONCERNES'] ?></textarea>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <label class="control-label" for="inputMesuresCompensatoiresProposees">Mesure(s) compensatoire(s) proposée(s)</label>
+        <div class="controls">
+            <textarea id="inputMesuresCompensatoiresProposees" name="MESURES_COMPENSATOIRES_PROPOSEES"><?= $this->avisDerogations['MESURES_COMPENSATOIRES_PROPOSEES'] ?></textarea>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <label class="control-label" for="inputAnalyseDeRisque">Analyse de risque</label>
+        <div class="controls">
+            <textarea id="inputAnalyseDeRisque" name="ANALYSE_DE_RISQUE"><?= $this->avisDerogations['ANALYSE_DE_RISQUE'] ?></textarea>
         </div>
     </div>
 
