--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -6,7 +6,7 @@
     <div class="row-fluid">
         <div class="span6">
             <p>Type : <?= $this->TYPE ?></p>
-            <p>Informations : <?= $this->INFORMATIONS ?>
+            <p>Objet : <?= $this->OBJET ?>
             <p>Avis : <?= $this->LIBELLE_AVIS ?></p>
         </div>
         <div class="span6">
