--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -63,9 +63,11 @@
                             <th>#</th>
                     <?php endif ?>
                         <?php foreach($this->champ['FILS'] as $champsFils) :?>
-                            <th>
-                                <?= !empty($champsFils['NOM']) ? $champsFils['NOM'] : '' ?>
-                            </th>
+                            <?php if(!empty($champsFils['NOM'])) : ?>
+                                <th>
+                                    <?= $champsFils['NOM'] ?>
+                                </th>
+                            <?php endif ?>
                         <?php endforeach ?>
                         <?php if(isset($this->canWrite) ? $this->canWrite : true) :?>
                             <th>Supprimer</th>
@@ -98,7 +100,7 @@
                         <?php endif?>
                     </td>
                 </tr>
-                        -->
+                -->
                 <!-- FIXME Utiliser $this->champ['VALEUR'] : Nécessite peut-être d'ajouter des choses côté back -->
                     <?= $this->partial('formulaire/partials/tableau/partial-tableau.phtml', [
                             'colonnesChamp' => $this->champ['FILS'],
