--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -75,33 +75,13 @@
                     </tr>
                 </thead>
                 <tbody id= <?= 'tbody-'.$this->champ['ID_CHAMP'] ?> class='grp'>
-
-                <!--
-                <tr class='ligneTableau hidden'>
-                    <?php if(isset($this->canWrite) ? $this->canWrite : true) :?>
-                        <td class='tdMove'>
-                            <i class="icon-move"></i>
-                        </td>
-                    <?php endif ?>
-                    <?php foreach($this->champ['FILS'] as $champsFils) :?>
-                            <td>
-                                <?= $this->partial('formulaire/partials/partial-input-champ.phtml', [
-                                    'champ' => $champsFils,
-                                    'canWrite' => isset($this->canWrite) ? $this->canWrite : false,
-                                    'idxTableau' => 0,
-                                    'idParent' => $this->champ['ID_CHAMP']
-                                    ]);
-                                ?>
-                            </td>
-                    <?php endforeach ?>
-                    <td>
-                        <?php if(isset($this->canWrite) ? $this->canWrite : false) :?>
-                            <button type='button' class='deleteRow btn btn-danger'><i class='icon-trash'></i></button>
-                        <?php endif?>
-                    </td>
-                </tr>
-                -->
-                <!-- FIXME Utiliser $this->champ['VALEUR'] : Nécessite peut-être d'ajouter des choses côté back -->
+                    <tr class='ligneTableau hidden'>
+                        <?= $this->partial('formulaire/partials/tableau/partial-ligne-pattern.phtml',
+                            [
+                                'patterns' => $this->champ['FILS']['PATTERNS'],
+                            ]);
+                        ?>
+                    </tr>
                     <?= $this->partial('formulaire/partials/tableau/partial-tableau.phtml', [
                             'colonnesChamp' => $this->champ['FILS'],
                             'canWrite' => isset($this->canWrite) ? $this->canWrite : false
