Correction de l'affichage des valeurs de liste dans un champ tableau

--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -84,6 +84,7 @@
                     </tr>
                     <?= $this->partial('formulaire/partials/tableau/partial-tableau.phtml', [
                             'colonnesChamp' => $this->champ['FILS'],
+                            'champsvaleurliste' => $this->champsvaleurliste,
                             'canWrite' => isset($this->canWrite) ? $this->canWrite : false
                         ]);
                     ?>
