--- a/application/views/scripts/formulaire/partials/tableau/partial-tableau.phtml
+++ b/application/views/scripts/formulaire/partials/tableau/partial-tableau.phtml
@@ -9,6 +9,7 @@
             <td>
                 <?= $this->partial('formulaire/partials/partial-input-champ.phtml', [
                         'champ' => $valeur,
+                        'champsvaleurliste' => $this->champsvaleurliste,
                         'canWrite' => isset($this->canWrite) ? $this->canWrite : false,
                         'idxTableau' => $valeur['IDX_VALEUR'],
                         'idParent' => $valeur['ID_PARENT']
