Exécution du healthcheck Plat'AU sur la page d'accueil

--- a/application/views/scripts/index/partials/dossierPlatau.phtml
+++ b/application/views/scripts/index/partials/dossierPlatau.phtml
@@ -1,10 +1,20 @@
-<?php if (count($this->data) > 0): ?>
-   <ul class='recherche_liste unstyled no_slide scroll-bloc-medium'>
-    <?php echo $this->partialLoop('search/results/dossier.phtml', $this->data)?>
-   </ul>
+<?php if ($this->error): ?>
+    <ul class='unstyled'>
+        <li class='alert alert-error'>
+            <button class='close' data-dismiss='alert'>&times;</button>
+            <strong class='alert-error'><?= $this->error['title'] ?></strong>
+            <?= $this->error['message'] ?>
+        </li>
+    </ul>
 <?php else: ?>
-   <small class='muted'>Aucun dossier.</small>
- <?php endif ?>
+    <?php if (count($this->data) > 0): ?>
+        <ul class='recherche_liste unstyled no_slide scroll-bloc-medium'>
+            <?php echo $this->partialLoop('search/results/dossier.phtml', $this->data)?>
+        </ul>
+    <?php else: ?>
+        <small class='muted'>Aucun dossier.</small>
+    <?php endif ?>
+<?php endif ?>
 <script type="text/javascript">
     $(document).ready(function() {
         $("#<?php echo $this->id ?> .panel-heading").append(' (<?php echo count($this->data) ?>)');
