fix bug tableau

--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -1,3 +1,4 @@
+<?= $this->champ['ID_CHAMP'] ?>
 <?php switch ($this->champ['ID_TYPECHAMP']) {
     // Texte
     //<!-- FIXME Vérifier si les paramètres sont bien passés, et passer l ID_VALEUR : A modifier dans Service_Descriptif et Service_Valeur -->
