Correction ajout valeur de liste dans un element tableau

--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -80,6 +80,7 @@
                         <?= $this->partial('formulaire/partials/tableau/partial-input-tableau.phtml',
                             [
                                 'inputs' => $this->champ['FILS']['INPUTS'],
+                                'champsvaleurliste' => $this->champsvaleurliste
                             ]);
                         ?>
                     </tr>
