--- a/application/views/scripts/formulaire/partials/tableau/partial-input-tableau.phtml
+++ b/application/views/scripts/formulaire/partials/tableau/partial-input-tableau.phtml
@@ -12,6 +12,7 @@
                 'champ' => $input,
                 'canWrite' => true,
                 'idxTableau' => '0',
+                'champsvaleurliste' => $this->champsvaleurliste
             ]);
         ?>
     </td>
